# SR_robot

./: CMakeLists.txt  README.md  package.xml
desktop/: icontest.desktop  run_mapping.bash
launch/: amcl.launch  display.launch  gazebo.launch  go_to_room1.launch  hokuyo.launch  imu_transform.launch  move_base.launch  navigation.launch  navigation_test.launch  navrqt.launch  nucleo.launch  opencr.launch  robot.launch  slam.launch  slam_test.launch
lowlevel_code/: nucleo.cpp  opencr.ino
lowlevel_code/NucleoF411_mbed/: Motor.lib  main.cpp  mbed_config.h
lowlevel_code/NucleoF411_mbed/mbed/TARGET_NUCLEO_F411RE/TARGET_STM/TARGET_STM32F4/: device.h  pin_device.h
lowlevel_code/NucleoF411_mbed/mbed/TARGET_NUCLEO_F411RE/TARGET_STM/TARGET_STM32F4/TARGET_STM32F411xE/TARGET_NUCLEO_F411RE/: PinNames.h
lowlevel_code/NucleoF411_mbed/mbed/TARGET_NUCLEO_F411RE/TARGET_STM/TARGET_STM32F4/device/: stm32f4xx_hal_adc.h
lowlevel_code/NucleoF411_mbed/mbed/TARGET_NUCLEO_F411RE/TOOLCHAIN_ARM_STD/: mbed.ar  stm32f411re.sct
lowlevel_code/NucleoF411_mbed/ros_lib_kinetic/ros/: node_handle.h
meshes/: base_laser.STL  base_scan.STL  imu_link.STL
param/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rqt/: nav.perspective  rviz_nav.perspective
rviz/: navigation_rqt.rviz  navigation_rviz.rviz  test_slam_rviz.rviz
urdf/: RS3.urdf  final_design_2.urdf  srobot.urdf
