<package>
  <name>srobot</name>
  <version>0.0.0</version>
  <description>
    <p>service robot mapping, navigation</p>
  </description>
  <author>Phurin</author>
  <maintainer email="poorin31632@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>rosserial_python</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
